# VectorizedBayesianNetwork

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: codecov.yml  tests.yml
benchmarking/: README.md  bnlearn_bnfit.py  datasets.py  generate_bnlearn.py  paths.py  requirements.txt  utils.py  utils_errors.py  utils_logging.py
benchmarking/01_data_download/: __init__.py  base.py  download_bnlearn.py  registry.py
benchmarking/02_query_generation/: __init__.py  base.py  bnlearn.py
benchmarking/03_data_generation/: __init__.py  base.py  bnlearn.py  registry.py
benchmarking/IIII_run_benchmark/: __init__.py  base.py  bnlearn.py  registry.py
benchmarking/III_data_generation/: base.py  bnlearn.py
benchmarking/II_query_generation/: base.py  bnlearn.py  registry.py
benchmarking/I_data_download/: base.py  download_bnlearn.py
benchmarking/bnlearn_data/: metadata.json
benchmarking/bundles/: __init__.py  bundle.py
demonstrations/: 1_cardinality.py  1_continuous.py  2_scalability_num_mechanisms.py  3_inference_complexity.py  4_updaes.py  running_example_complexity.py
examples/: 01_add_data_and_refit.py  01_basic_fit.py  01_categorical_cpds_benchmark.py  01_continous_cpds_benchmark.py  01_fit_and_infer.py  02_add_data_and_refit.py  02_compare_cpds.py  02_infer_posterior.py  03_sampling.py  03_save_and_load.py  04_approximate_inference.py  04_update_mechanisms_demo.py  04_update_online.py  05_exact_inference.py  05_save_load.py  06_causal_inference.py  06_prediction_vs_diagnosis.py  06_sampling_demo.py  1_learning.py  1_learning_cpds_mle.py  1_learning_implicit_generators.py  1_learning_parametric_cpd.py  2_example_inference.py  _common.py  main_example.py
stress_test/: my2.py  plot_stress_test.py  run.py
tests/: conftest.py  test_benchmark_split_smoke.py  test_benchmarking_presets_yaml.py  test_config_defaults.py  test_cpd_handle.py  test_cpds.py  test_device.py  test_error_utils.py  test_examples_run.py  test_examples_smoke.py  test_gaussian_exact_relative.py  test_graph.py  test_import_local.py  test_imports.py  test_inference.py  test_inference_batching.py  test_learning.py  test_partitions.py  test_performance_upgrades.py  test_persistence.py  test_pipeline_integration.py  test_public_outputs.py  test_rao_blackwellized_marginalization.py  test_registry.py  test_reporting_split.py  test_sampling.py  test_softmax_mismatch.py  test_stress_test_synthetic.py  test_update.py
vbn/: __init__.py  config_cast.py  core.py  defaults.py  io.py  plotting.py  utils.py  vbn.py
(+180 files in other folders)
