[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vbn"
version = "0.3.0"
description = "Vectorized Bayesian Networks in PyTorch with differentiable CPDs and sampling-based inference."
readme = "README.md"
authors = [{name = "Giovanni Briglia"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "pandas>=1.5",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "numpy>=1.23",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.5", "black>=24.0", "mypy>=1.8"]
test = ["pytest>=7.0", "pytest-cov", "coverage[toml]", "matplotlib>=3.8"]
torch = ["torch>=2.0"]

[tool.setuptools]
packages = {find = {where = ["."], include = ["vbn*"]}}

[tool.setuptools.package-data]
"vbn" = ["configs/**/*.yaml"]
